1998-12-18  Harri Porten  <porten@kde.org>

	* #include "auth.h" was needed after pap.h was removed

1998-12-18  Harri Porten  <porten@kde.org>

	* removed pap.* and chap.* files and moved their code in
	requester.cpp where all setuid root stuff is gathered now.
	* requester.cpp: rewrote PAP/CHAP so that the setuid part is free
	of any Qt/X calls. 

1998-12-16  Mario Weilguni <mweilguni@kde.org>

	* added Indonesia rule files
	* added some new Denmark rule files
	* added a patch from Filip Larsen <filip@post4.tele.dk> to allow a
	  rule to be dependent on connection time. See Rules/TEMPLATE for
	  an example. This will allow much better danish rulesets

1998-12-14  Harri Porten  <porten@kde.org>

	* runtests.cpp: fixed test for pppd's suid bit
	* requester.cpp: initialize struct control (may be necessary for
	some kernel versions)
	* runtests.cpp: use Requester to check write access to modem (PPP Test)

1998-12-13  Harri Porten  <porten@kde.org>

	* use hardcoded lock file path (kpppconfig.h)
	* tighten interface between Requester/Opener by transmitting
	device index instead of device path 
	* do a fchown(fd, 0, 0) on lock file

1998-12-08  Mario Weilguni <mweilguni@kde.org>

	* added Denmark rules
	* added Luxembourg rules
	* commented out the no-longer need CHAP_* functions
	* removed the old/never used setup program
	* cleaned up accounting (set umask, no chown/chmod)
	* cleaned up PPP log (set umask, no SUID check)

1998-12-05  Harri Porten  <porten@kde.org>

	* connect.cpp: killpppd() and stop if_timeout_timer in cancelbutton()
	* main.cpp: ignore SIGCHLDs in shutDown()
	* main.cpp: interface timeout error wasn't displayed anymore
	* modem.cpp: check for possible existance of stale lockfile before
	trying it to open via Requester::rq->openLockFile(). The resulting
	error message on failure was too confusing.
	* main.cpp: ignore SIGHUPs in child process

1998-12-04  Harri Porten  <porten@kde.org>
